joi validation done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,8 @@
   <body>
     <% include ./_layouts/header %>
     <div class="wrapper">
-      <a class="btn btn-primary" href="/user/register">Register</a>
+      <a class="btn btn-primary" href="/users/register">Register</a>
+      <a class="btn btn-primary" href="/weather">Weather</a>
     </div>
   </body>
 </html>
