--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -1,3 +1,5 @@
-<div class="header">
-  <a href="/">WeatherNow</a>
-</div>
+<nav class="navbar navbar-light bg-dark">
+  <a class="navbar-text mx-auto" style="color: white" href="/">
+    WeatherNow
+  </a>
+</nav>
