--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -1,6 +1,3 @@
-<!-- <div class="header">
-  <a href="/">WeatherNow</a>
-</div> -->
-<nav class="navbar navbar-light bg-dark" >
-  <span class="navbar-brand mb-0 h1" style="color: white;padding-left:47%"  >WeatherNow</span>
+<nav class="navbar navbar-light bg-dark mx-auto">
+  <a class="navbar-text mb-0 h3" style="color: white;" href="/">WeatherNow</a>
 </nav>
