--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -5,8 +5,8 @@
   <body>
     <% include ../_layouts/header %>
     <div class="container">
-      <h2 style="text-align: center;top: 70px;">Register Form</h2>
-      <div class="form-wrap">
+      <h2 style="text-align: center;">Register Form</h2>
+      <div class="row">
         <form action="" method="POST" id="registerForm">
           <div class="form-group">
             <label class="control-label col-sm-3" for="name">Full Name:</label>
@@ -61,6 +61,8 @@
               />
             </div>
           </div>
+          <div class="alert alert-danger" role="alert" id="errorAlert" style="display:none">
+          </div>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <button type="submit" class="btn btn-primary">Register</button>
@@ -85,20 +87,22 @@
       $.map(unindexed_array, function(n, i) {
         indexed_array[n["name"]] = n["value"];
       });
-
       $.ajax({
         url: "/api/users",
         method: "POST",
         data: indexed_array
-      })
-        .done(data => {
-          $("#registerForm")[0].reset();
-          window.location.replace("/");
-        })
-        .fail(e => {
-          // window.location.reload("/");
-          // console.log(e.JSON());
-        });
+      }).then(data => {
+        $("#registerForm")[0].reset();
+        window.location.replace("/");
+      }).catch(e=> {
+        $("#errorAlert").show();
+        let err = e.responseText.match(/<h1>(.*?)<\/h1>/g).map(function(val){
+            return val.replace(/<\/?h1>/g,'');
+         });
+         $("#errorAlert").append(err);
+
+
+      });
     }
   </script>
 </html>
