--- a/views/weather/weather.ejs
+++ b/views/weather/weather.ejs
@@ -2,8 +2,63 @@
   <head>
     <% include ../_layouts/head %>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <style>
+      .dataList {
+        display: -webkit-box;
+        background-color: lightblue;
+        padding: 20px;
+        width: fit-content;
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        line-height: 1.5em;
+      }
+      .panel {
+        width: 200px;
+      }
+      b:hover {
+        color: brown;
+      }
+
+      .panel p:hover {
+        color: brown;
+        font-size: larger;
+      }
+      img {
+        opacity: 0.8;
+      }
+      img:hover {
+        opacity: 1;
+      }
+    </style>
   </head>
   <body>
     <% include ../_layouts/header %>
+    <div class="container">
+      <h3 style="text-align: center;">Your Weather Data</h3>
+      <div class="dataList">
+        <div class="panel-left " style="text-align: center float: left;;">
+          <p>Latitude: <b><%= weatherData[0] %></b></p>
+          <p>Longitude:<b><%= weatherData[1] %></b></p>
+          <p>Pressure: <b><%= weatherData[2] %> hPa</b></p>
+          <p>Humidity: <b><%= weatherData[3] %> %</b></p>
+          <p>Visibility: <b><%= weatherData[4] %> m</b></p>
+        </div>
+        <div class="panel" style="text-align: center;">
+          <img src="/images/<%= weatherData[12] %>.png" />
+          <p><b><%= weatherData[11] %> °C</b></p>
+          <p><b><%= weatherData[13] %></b></p>
+          <p><b><%= weatherData[14] %>, <%= weatherData[15] %></b></p>
+        </div>
+        <div class="panel-right">
+          <p>Cloudiness: <b><%= weatherData[5] %> %</b></p>
+          <p>Wind Speed: <b><%= weatherData[6] %> m/s</b></p>
+          <p>Wind Degree: <b><%= weatherData[7] %> °</b></p>
+          <p>Sunrise: <b><%= weatherData[8] %> A.M</b></p>
+          <p>Sunset: <b><%= weatherData[9] %> P.M</b></p>
+        </div>
+      </div>
+    </div>
   </body>
+  <script></script>
 </html>
