Hash comparison successful

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-dark">
-  <a class="navbar-text mx-auto" style="color: white" href="/">
-    WeatherNow
+  <a class="navbar-text mx-auto" style="color: white; text-decoration: none;" href="/">
+    <h4>WeatherNow</h4>
   </a>
 </nav>
