--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,6 +1,13 @@
 <html>
   <head>
     <% include ../_layouts/head %>
+    <style>
+      .container {
+        margin-top: 10px;
+        background-color: lightblue;
+        width: fit-content;
+      }
+    </style>
   </head>
   <body>
     <% include ../_layouts/header %>
