--- a/views/weather/weather.ejs
+++ b/views/weather/weather.ejs
@@ -3,15 +3,16 @@
     <% include ../_layouts/head %>
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <style>
+      .container {
+        background-color: lightblue;
+        width: fit-content;
+        margin-top: 10px;
+      }
       .dataList {
         display: -webkit-box;
-        background-color: lightblue;
-        padding: 20px;
-        width: fit-content;
         position: relative;
         left: 50%;
         transform: translateX(-50%);
-        line-height: 1.5em;
       }
       #logoutBtn {
         top: 5px;
