Update Location feature and errors handled

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -16,6 +16,9 @@
     <% include ./_layouts/header %>
     <div class="container">
       <h3><%= message %></h3>
+      <p>You need to update your location</p>
+      <a class="btn btn-primary" href="users/update" style="text-decoration: none;">Update Now</a>
+      <a class="btn btn-primary" href="users/logout" style="text-decoration: none;">Logout</a>
     </div>
   </body>
 </html>
