--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -68,6 +68,7 @@
               />
             </div>
           </div>
+
           <div class="alert alert-danger" role="alert" id="errorAlert" style="display:none"></div>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
@@ -94,21 +95,22 @@
       $.map(unindexed_array, function(n, i) {
         indexed_array[n["name"]] = n["value"];
       });
+
       $.ajax({
         url: "/api/users/register",
         method: "POST",
         data: indexed_array
       })
-        .then(data => {
+        .done(data => {
           $("#registerForm")[0].reset();
           window.location.replace("/weather");
         })
-        .catch(e => {
-          $("#errorAlert").show();
-          let err = e.responseText.match(/<h1>(.*?)<\/h1>/g).map(function(val) {
-            return val.replace(/<\/?h1>/g, "");
+        .fail(e => {
+          let err = e.responseText.match(/<pre>(.*?)<\/pre>/g).map(function(val) {
+            return val.replace(/<\/?pre>/g, "");
           });
-          $("#errorAlert").append(err);
+          document.getElementById("errorAlert").innerHTML = err;
+          $("#errorAlert").show();
         });
     }
   </script>
